# SolarEdgeController

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  esp_test.py  healthcheck.py  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  solaredge_modbus_test.py  test.py
certs/: solaredgecontroller.crt  solaredgecontroller.key
path/to/: file.txt
scripts/: SolarEdgeInverter.py  solaredge_modbus.py  solaredge_modbus_test.py
solar_controller/: main.py
solar_controller/controller/: solar_regulator.py
solar_controller/inverter/: solaredge_inverter.py
solar_controller/sensors/: esphome_reader.py
src/: EspReader.py  SolarEdgeInverter.py  export_limiter.py
src/solar_controller/: config.py  logger.py  main.py  server.py
src/solar_controller/base/: inverter.py  sensor.py
src/solar_controller/controller/: solar_regulator.py
src/solar_controller/factories/: inverter_factory.py  sensor_factory.py
src/solar_controller/inverter/: solaredge_inverter.py  solaredge_inverter_registers.py
src/solar_controller/sensors/: esphome_reader.py
tests/: test_esp_reader.py  test_main.py  test_solar_regulator.py  test_solaredge_inverter.py
