[tool.ruff]
# Base configuration translated from your previous flake8 config
exclude = [
    ".git",
    ".venv",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# ignore E501 (line length)
ignore = ["E501", ]
# Optional: line-length setting, commented out for now
# line-length = 88
# per-file exceptions, optional
#per-file-ignores = { "tests/*" = ["F401"] }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar_controller"
version = "0.1.1"
description = "Python package for controlling and monitoring SolarEdge inverters"
authors = [
    { name = "Niklas Melin", email = "niklasme@pm.me" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "confuse>=2.1.0",
    "uv",
    "pyserial>=3.5",
    "pytest-asyncio>=0.21",
    "pytest>=7.0",
    "pydantic>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "ruff>=0.0.300",      # Linter
    "ipython>=8.0",
]
